# lingua-py

./: .editorconfig  .gitignore  ACCURACY_PLOTS.md  ACCURACY_TABLE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  codecov.yml  generate-github-pages.sh  pyproject.toml
.github/workflows/: build.yml  release.yml
accuracy-reports/: aggregated-accuracy-values.csv  average-accuracy-values.csv  sentences-accuracy-values.csv  single-words-accuracy-values.csv  word-pairs-accuracy-values.csv
accuracy-reports/cld2/: Afrikaans.txt  Albanian.txt  Arabic.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Ganda.txt  German.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Japanese.txt  Kazakh.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Malay.txt  Maori.txt  Marathi.txt  Mongolian.txt  Nynorsk.txt  Persian.txt  (+25 more)
accuracy-reports/cld3/: Greek.txt  Latin.txt  Punjabi.txt  Welsh.txt
accuracy-reports/fastspell-aggr/: Afrikaans.txt  Albanian.txt  Azerbaijani.txt  Belarusian.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  Esperanto.txt  Estonian.txt  Georgian.txt  Gujarati.txt  Hindi.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Japanese.txt  Kazakh.txt  Korean.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Malay.txt  Marathi.txt  Mongolian.txt  Nynorsk.txt  Persian.txt  Portuguese.txt  Russian.txt  Serbian.txt  Slovak.txt  Slovene.txt  Somali.txt  Spanish.txt  (+6 more)
accuracy-reports/fastspell-cons/: Afrikaans.txt  Albanian.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Finnish.txt  French.txt  German.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Kazakh.txt  Latvian.txt  Macedonian.txt  Malay.txt  Marathi.txt  Mongolian.txt  Nynorsk.txt  Persian.txt  Polish.txt  Portuguese.txt  Romanian.txt  Russian.txt  Serbian.txt  Slovak.txt  Slovene.txt  (+10 more)
accuracy-reports/fasttext/: Afrikaans.txt  Albanian.txt  Arabic.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  German.txt  Greek.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Kazakh.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Malay.txt  Marathi.txt  Mongolian.txt  Nynorsk.txt  Persian.txt  Polish.txt  Portuguese.txt  Punjabi.txt  (+16 more)
accuracy-reports/langdetect/: Afrikaans.txt  Albanian.txt  Arabic.txt  Bulgarian.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Estonian.txt  Finnish.txt  French.txt  German.txt  Gujarati.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Indonesian.txt  Italian.txt  Japanese.txt  Korean.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Marathi.txt  Persian.txt  Polish.txt  Portuguese.txt  Romanian.txt  Russian.txt  Slovak.txt  Slovene.txt  Somali.txt  Spanish.txt  Swahili.txt  Swedish.txt  Tagalog.txt  Thai.txt  (+5 more)
accuracy-reports/langid/: Afrikaans.txt  Albanian.txt  Arabic.txt  Armenian.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Georgian.txt  German.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Japanese.txt  Kazakh.txt  Korean.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Malay.txt  Marathi.txt  (+22 more)
accuracy-reports/lingua-afrikaans-detector/: Afrikaans.txt  Albanian.txt  Arabic.txt  Armenian.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Ganda.txt  Georgian.txt  German.txt  Greek.txt  Gujarati.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Kazakh.txt  Korean.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Malay.txt  (+32 more)
accuracy-reports/lingua-albanian-detector/: Afrikaans.txt  Albanian.txt  Arabic.txt  Armenian.txt  Azerbaijani.txt  Basque.txt  Bengali.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Ganda.txt  Georgian.txt  German.txt  Greek.txt  Gujarati.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Kazakh.txt  Korean.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Malay.txt  Maori.txt  (+30 more)
accuracy-reports/lingua-arabic-detector/: Arabic.txt  Basque.txt  Esperanto.txt  Latin.txt  Macedonian.txt  Malay.txt  Mongolian.txt  Persian.txt  Serbian.txt  Somali.txt  Tagalog.txt  Urdu.txt  Yoruba.txt
accuracy-reports/lingua-armenian-detector/: Bulgarian.txt  Georgian.txt  Latin.txt  Marathi.txt
docs/: builder.html  detector.html  index.html  isocode.html  language.html  lingua.html  search.js  writer.html
lingua/: README.md  __init__.py  _constant.py  _json.py  _model.py  _ngram.py  builder.py  detector.py  isocode.py  language.py  writer.py
pdoc-templates/: logo.mako
scripts/: accuracy_plot_drawer.py  accuracy_reporter.py  accuracy_table_writer.py  benchmark.py  memory_profiler.py  most_common_ngrams_writer.py  unique_ngrams_writer.py
tables/: AVERAGE_ACCURACY_TABLE.md  SENTENCES_ACCURACY_TABLE.md  SINGLE_WORDS_ACCURACY_TABLE.md  WORD_PAIRS_ACCURACY_TABLE.md
tests/: __init__.py  test_builder.py  test_detector.py  test_json.py  test_language.py  test_model.py  test_ngram.py  test_writer.py
(+5233 files in other folders)
