#
# Copyright © 2022-present Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "lingua-language-detector"
version = "1.3.5"
description = "An accurate natural language detection library, suitable for short text and mixed-language text"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pemistahl/lingua-py"
repository = "https://github.com/pemistahl/lingua-py"
packages = [
    { include = "lingua" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Afrikaans",
    "Natural Language :: Arabic",
    "Natural Language :: Basque",
    "Natural Language :: Bengali",
    "Natural Language :: Bosnian",
    "Natural Language :: Bulgarian",
    "Natural Language :: Catalan",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Croatian",
    "Natural Language :: Czech",
    "Natural Language :: Danish",
    "Natural Language :: Dutch",
    "Natural Language :: English",
    "Natural Language :: Esperanto",
    "Natural Language :: Finnish",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Greek",
    "Natural Language :: Hebrew",
    "Natural Language :: Hindi",
    "Natural Language :: Hungarian",
    "Natural Language :: Icelandic",
    "Natural Language :: Indonesian",
    "Natural Language :: Irish",
    "Natural Language :: Italian",
    "Natural Language :: Japanese",
    "Natural Language :: Korean",
    "Natural Language :: Latin",
    "Natural Language :: Latvian",
    "Natural Language :: Lithuanian",
    "Natural Language :: Macedonian",
    "Natural Language :: Malay",
    "Natural Language :: Marathi",
    "Natural Language :: Norwegian",
    "Natural Language :: Panjabi",
    "Natural Language :: Persian",
    "Natural Language :: Polish",
    "Natural Language :: Portuguese",
    "Natural Language :: Romanian",
    "Natural Language :: Russian",
    "Natural Language :: Serbian",
    "Natural Language :: Slovak",
    "Natural Language :: Slovenian",
    "Natural Language :: Spanish",
    "Natural Language :: Swedish",
    "Natural Language :: Tamil",
    "Natural Language :: Telugu",
    "Natural Language :: Thai",
    "Natural Language :: Turkish",
    "Natural Language :: Ukrainian",
    "Natural Language :: Urdu",
    "Natural Language :: Vietnamese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
brotli = "^1.1.0"
regex = "^2023.12.25"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
coverage = "^7.4.4"
mypy = "^1.9.0"
pytest = "^8.1.1"

[tool.poetry.group.script.dependencies]
# https://github.com/facebookresearch/fastText/pull/1292
fasttext = {git = "https://github.com/cfculhane/fastText.git"}
gcld3 = "^3.0.13"
langdetect = "^1.0.9"
langid = "^1.1.6"
matplotlib = [
    {version = "^3.7.3,<3.8", python = ">=3.8,<3.9"},
    {version = "^3.8.3", python = ">=3.9,<3.13"}
]
numpy = [
    {version = "^1.24.4,<1.25", python = ">=3.8,<3.9"},
    {version = "^1.26.4", python = ">=3.9,<3.13"}
]
pandas = [
    {version = "^2.0.3,<2.1", python = ">=3.8,<3.9"},
    {version = "^2.2.1", python = ">=3.9,<3.13"}
]
psutil = "^5.9.8"
pycld2 = "^0.41"
seaborn = "^0.13.2"
simplemma = "^0.9.1"

[tool.mypy]
files = ["lingua", "scripts", "tests"]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=scripts"

[tool.coverage.run]
source = ["lingua"]

[tool.black]
include = '(lingua|scripts|tests)/.*\.py'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
